# sakao-jblomlof-tarnvik-daniels5-project

./: README.md
Physics2D/: Cargo.toml  objects.json
Physics2D/src/: game.rs  main.rs  vector.rs
Physics2D/src/game/: button.rs  draw.rs  input.rs  objects.rs  traits.rs  ui_button.rs  update.rs  vector.rs
Physics2D/src/game/draw/: button.rs
Physics2D/src/game/simulation/: collision.rs  objects.rs  traits.rs
Physics2D/src/game/ui/: toolbar.rs  ui_button.rs  ui_draw.rs  ui_input.rs  ui_objects.rs
docs/: specification.md
